# NeutrinosAngra

./: .gitignore  README.md
AngraG4Simulation/: AngraG4Simulation.cc  AngraSimulations.cc  CMakeLists.txt  GNUmakefile  README  README.md  RealeaseNotes.txt  run1.mac  vis.mac  vis_qt.mac
AngraG4Simulation/cmake/: FindGeant4.cmake
AngraG4Simulation/include/: AngraActionInitialization.hh  AngraCommandLineParser.hh  AngraConstantMgr.hh  AngraDetectorConstruction.hh  AngraEventAction.hh  AngraHEPEvtInterface.hh  AngraMCLog.hh  AngraPMTHit.hh  AngraPMTSD.hh  AngraPhysicsList.hh  AngraPrimaryGeneratorAction.hh  AngraSteppingAction.hh  AngraTrackingAction.hh  AngraVetoHit.hh  AngraVetoSD.hh
AngraG4Simulation/src/: .AngraMCLog.cc.swp  AngraActionInitialization.cc  AngraCommandLineParser.cc  AngraConstantMgr.cc  AngraDetectorConstruction.cc  AngraEventAction.cc  AngraHEPEvtInterface.cc  AngraMCLog.cc  AngraPMTHit.cc  AngraPMTSD.cc  AngraPhysicsList.cc  AngraPrimaryGeneratorAction.cc  AngraSteppingAction.cc  AngraTrackingAction.cc  AngraVetoHit.cc  AngraVetoSD.cc  AngraWaterBox1.cc  AngraWaterBox2.cc  geometric_model.gdml
AngraG4_2_Root/: g4_2_root.cpp
AngraG4_2_Root/Macros/: convert.C
AngraGenerators/: gen_electrons.C  gen_gammas.C  gen_muons.C  gen_neutrinos.C  gen_neutrons.C  gen_photons.C  gen_pions.C  gen_positrons.C  gen_protons.C
AngraGenerators/electromagnetic/: electrons.cpp  photons.cpp  positrons.cpp
AngraGenerators/environment/: BKG_LabNe_G33_12h.TKA  gammas.cpp
AngraGenerators/hadrons/: neutrons.cpp  pions.cpp  protons.cpp
AngraGenerators/muons/: muonSpectrum.cpp  muons.cpp
AngraGenerators/neutrinos/: AngraNuGen.cpp  generate.C
AngraMCEvent/: AngraMCEvent.cxx  AngraMCEvent.h
AngraMCPulse/: .directory  AngraMCPulse.cxx  AngraMCPulse.h
AngraMixer/: .bg_signal.mac.swp  CalcRatio.cpp  LoadLibs.cxx  PulseMixer.cpp  ReadMacro.cpp  SortPulses.cpp  WriteTimes.cpp
AngraMixer/PietroMixer/: .AngraMCPulse.h.swp  AngraMCMixer.cxx  AngraMCMixer.h  AngraMCPulse.cxx  AngraMCPulse.h  AngraMCPulseLinkDef.h  AngraMixerTimer.cxx  AngraMixerTimer.h  Makefile  Mixer.cxx  PulseTree.h  TestList.cxx  TestTimer.cxx
AngraMixer/macros/: 000001.450s.mix  000002.450s.mix  000003.450s.mix  000004.450s.mix  000005.450s.mix  000006.450s.mix  000007.450s.mix  000008.450s.mix  000009.450s.mix  000010.450s.mix  000011.450s.mix  000012.450s.mix  run000001.C  run000002.C  run000003.C  run000004.C  run000005.C  run000006.C  run000007.C  run000008.C  run000009.C  run000010.C  run000011.C  run000012.C  sort000001.C
AngraPulseTreeFactory/: PulseTreeFactory.cxx  RunPTF.cxx
